--- a/stye.css
+++ b/stye.css
@@ -5,9 +5,10 @@ body {
     margin: 0;
 }
 .carousel {
-    width: 100vh;
+    width: 100%;
     height: 100vh;
     position: relative;
+    object-fit:cover;
 }
 .carousel > ul {
     margin: 0;
@@ -38,7 +39,7 @@ body {
     z-index: 2;
     background: none;
     border: none;
-    font-size: 4rem;
+    font-size: 6rem;
     top: 50%;
     transform: translateY(-50%);
     color: rgba(255, 255, 255, .5);
