--- a/style.css
+++ b/style.css
@@ -5,10 +5,9 @@ body {
     margin: 0;
 }
 .carousel {
-    width: 100%;
+    width: 100vh;
     height: 100vh;
     position: relative;
-    object-fit:cover;
 }
 .carousel > ul {
     margin: 0;
@@ -39,7 +38,7 @@ body {
     z-index: 2;
     background: none;
     border: none;
-    font-size: 6rem;
+    font-size: 4rem;
     top: 50%;
     transform: translateY(-50%);
     color: rgba(255, 255, 255, .5);
